imported new Fonts and fixed spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@
 @import "alerts";
 @import "new_user_registration";
 
+* {
+    font-family: 'Roboto';
+    font-weight: 300;
+}
+
 .topnav {
   background-color: #333;
   height: 50px;
